packages/svelte/tests/compiler-errors/samples/css-global-placement-2/main.svelte
<style>
	/* ok */
	div {
		&.y :global.x {
			color: red;
		}
	}

	/* not ok */
	:global.x {
		color: red;
	}
</style>
